--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>GPS Tracker em Carta Náutica</title>
+    <title>GPS Tracker [Diagnóstico]</title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-eCaCGRE6XYWvgqn5NDlnAaG4nCnFagmMaKHdT+YQkLQ=" crossorigin=""/>
 
@@ -15,68 +15,29 @@
             background-color: #121212;
             color: #e0e0e0;
             display: flex;
-            flex-direction: column; /* Layout vertical */
+            flex-direction: column;
         }
-
         .info-panel {
             background-color: #1e1e1e;
             padding: 10px 15px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.5);
             z-index: 1000;
-            color: #e0e0e0;
             border-bottom: 1px solid #444;
         }
-
         #map {
-            flex-grow: 1; /* O mapa ocupa o espaço restante */
+            flex-grow: 1;
             background-color: #333;
             z-index: 0;
         }
-
-        .data-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-        }
-        .data-point {
-            background-color: #2c2c2c;
-            padding: 8px;
-            border-radius: 6px;
-        }
-        .label {
-            font-weight: bold;
-            color: #03dac6;
-            font-size: 0.8em;
-            display: block;
-        }
-        .value {
-            font-family: 'Courier New', Courier, monospace;
-            color: #fff;
-            font-size: 1em;
-        }
-        #status {
-            text-align: center;
-            padding: 8px;
-            background-color: #3700b3;
-            color: white;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-radius: 5px;
-        }
-        .controls {
-            margin-top: 10px;
-            padding-top: 10px;
-            border-top: 1px solid #3a3a3a;
-        }
-        .slider-control {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-bottom: 5px;
-        }
-        input:type="range" {
-            flex-grow: 1;
-        }
+        .data-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+        .data-point { background-color: #2c2c2c; padding: 8px; border-radius: 6px; }
+        .label { font-weight: bold; color: #03dac6; font-size: 0.8em; display: block; }
+        .value { font-family: 'Courier New', Courier, monospace; color: #fff; font-size: 1em; }
+        #status { text-align: center; padding: 8px; background-color: #3700b3; color: white; font-weight: bold; margin-bottom: 10px; border-radius: 5px; }
+        .controls { margin-top: 10px; padding-top: 10px; border-top: 1px solid #3a3a3a; }
+        .slider-control { display: flex; align-items: center; gap: 10px; margin-bottom: 5px; }
+        input[type="range"] { flex-grow: 1; }
+        .leaflet-control-layers-toggle { background-image: url(https://unpkg.com/leaflet@1.9.4/dist/images/layers.png); }
     </style>
 </head>
 <body>
@@ -84,34 +45,14 @@
     <div class="info-panel">
         <div id="status">Aguardando permissão e sinal de GPS...</div>
         <div class="data-grid">
-            <div class="data-point">
-                <span class="label">Média Recente (3s)</span>
-                <span id="media_recente" class="value">--</span>
-            </div>
-            <div class="data-point">
-                <span class="label">Média Antiga (9-11s)</span>
-                <span id="media_antiga" class="value">--</span>
-            </div>
-            <div class="data-point">
-                <span class="label">Velocidade Média</span>
-                <span id="velocidade" class="value">--</span>
-            </div>
-            <div class="data-point">
-                <span class="label">Direção Média</span>
-                <span id="direcao" class="value">--</span>
-            </div>
+            <div class="data-point"> <span class="label">Média Recente (3s)</span> <span id="media_recente" class="value">--</span> </div>
+            <div class="data-point"> <span class="label">Média Antiga (9-11s)</span> <span id="media_antiga" class="value">--</span> </div>
+            <div class="data-point"> <span class="label">Velocidade Média</span> <span id="velocidade" class="value">--</span> </div>
+            <div class="data-point"> <span class="label">Direção Média</span> <span id="direcao" class="value">--</span> </div>
         </div>
         <div class="controls">
-            <div class="slider-control">
-                <label for="raio1" class="label">Raio 1:</label>
-                <input type="range" id="raio1" min="10" max="200" value="50">
-                <span id="raio1-value" class="value">50 m</span>
-            </div>
-            <div class="slider-control">
-                <label for="raio2" class="label">Raio 2:</label>
-                <input type="range" id="raio2" min="10" max="200" value="100">
-                <span id="raio2-value" class="value">100 m</span>
-            </div>
+            <div class="slider-control"> <label for="raio1" class="label">Raio 1:</label> <input type="range" id="raio1" min="10" max="200" value="50"> <span id="raio1-value" class="value">50 m</span> </div>
+            <div class="slider-control"> <label for="raio2" class="label">Raio 2:</label> <input type="range" id="raio2" min="10" max="200" value="100"> <span id="raio2-value" class="value">100 m</span> </div>
         </div>
     </div>
 
@@ -121,39 +62,53 @@
 
     <script>
         // --- ELEMENTOS DO DOM ---
-        const statusEl = document.getElementById('status');
-        const mediaRecenteEl = document.getElementById('media_recente');
-        const mediaAntigaEl = document.getElementById('media_antiga');
-        const velocidadeEl = document.getElementById('velocidade');
-        const direcaoEl = document.getElementById('direcao');
-        const raio1Slider = document.getElementById('raio1');
-        const raio2Slider = document.getElementById('raio2');
-        const raio1ValueEl = document.getElementById('raio1-value');
-        const raio2ValueEl = document.getElementById('raio2-value');
+        const statusEl = document.getElementById('status'), mediaRecenteEl = document.getElementById('media_recente'), mediaAntigaEl = document.getElementById('media_antiga'), velocidadeEl = document.getElementById('velocidade'), direcaoEl = document.getElementById('direcao'), raio1Slider = document.getElementById('raio1'), raio2Slider = document.getElementById('raio2'), raio1ValueEl = document.getElementById('raio1-value'), raio2ValueEl = document.getElementById('raio2-value');
 
         // --- ARMAZENAMENTO E CONFIGURAÇÕES ---
-        let historicoPontos = [];
+        let historicoPontos = [], raio1 = 50, raio2 = 100;
         const TEMPO_MAX_HISTORICO = 15000;
-        let raio1 = 50;
-        let raio2 = 100;
 
         // --- CONFIGURAÇÃO DO MAPA ---
-        const imageUrl = 'https://raw.githubusercontent.com/Contanada/ContraNav/main/1841.png';
+        const imageUrl = 'https://raw.githubusercontent.com/Contranada/ContraNav/main/1841.png';
         const imageBounds = [[-26.8667, -48.7000], [-26.9500, -48.5500]];
-        const map = L.map('map', { zoomControl: false });
-        L.imageOverlay(imageUrl, imageBounds).addTo(map);
-        map.fitBounds(imageBounds);
+        
+        // **NOVO: Camada de mapa base (OpenStreetMap)**
+        const osmLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        });
+
+        // **NOVO: Camada da sua imagem com opacidade para ver por baixo**
+        const cartaNauticaLayer = L.imageOverlay(imageUrl, imageBounds, {
+            opacity: 0.7, // Ajuste a opacidade conforme necessário
+            interactive: true
+        });
+
+        const map = L.map('map', {
+            center: [-26.908, -48.625], // Centro aproximado dos seus bounds
+            zoom: 13,
+            layers: [osmLayer, cartaNauticaLayer] // Inicia com as duas camadas ativas
+        });
+
+        // **NOVO: Definição das camadas para o controle**
+        const baseMaps = {
+            "Mapa de Ruas": osmLayer
+        };
+        const overlayMaps = {
+            "Carta Náutica (sua imagem)": cartaNauticaLayer
+        };
+
+        // **NOVO: Adiciona o controle de camadas no canto superior direito**
+        L.control.layers(baseMaps, overlayMaps).addTo(map);
 
         // Camadas dinâmicas
         let pontoMedioLayer = null, vetorVelocidadeLayer = null, circuloRaio1Layer = null, circuloRaio2Layer = null;
 
-        // --- CONTROLES DOS SLIDERS ---
         raio1Slider.addEventListener('input', (e) => { raio1 = parseInt(e.target.value); raio1ValueEl.textContent = `${raio1} m`; });
         raio2Slider.addEventListener('input', (e) => { raio2 = parseInt(e.target.value); raio2ValueEl.textContent = `${raio2} m`; });
 
         // --- LÓGICA PRINCIPAL ---
         function processarPosicao(posicao) {
-            statusEl.textContent = "GPS Ativo. Calculando...";
+            statusEl.textContent = `GPS Ativo. Precisão: ${posicao.coords.accuracy.toFixed(0)}m`;
             statusEl.style.backgroundColor = '#018786';
             const { latitude, longitude } = posicao.coords;
             const timestamp = Date.now();
@@ -163,10 +118,13 @@
             const pontosAntigos = historicoPontos.filter(p => (timestamp - p.timestamp) >= 9000 && (timestamp - p.timestamp) <= 11000);
             const mediaRecente = calcularMediaLatLon(pontosRecentes);
             const mediaAntiga = calcularMediaLatLon(pontosAntigos);
+            
+            // Limpa camadas antigas
             if(pontoMedioLayer) map.removeLayer(pontoMedioLayer);
             if(vetorVelocidadeLayer) map.removeLayer(vetorVelocidadeLayer);
             if(circuloRaio1Layer) map.removeLayer(circuloRaio1Layer);
             if(circuloRaio2Layer) map.removeLayer(circuloRaio2Layer);
+
             if (mediaRecente) {
                 mediaRecenteEl.textContent = `${mediaRecente.lat.toFixed(5)}, ${mediaRecente.lon.toFixed(5)}`;
                 pontoMedioLayer = L.marker([mediaRecente.lat, mediaRecente.lon]).addTo(map);
@@ -179,21 +137,20 @@
                     const direcaoGraus = calcularDirecao(mediaAntiga, mediaRecente);
                     velocidadeEl.textContent = `${velocidadeKnots.toFixed(1)} kn`;
                     direcaoEl.textContent = `${direcaoGraus.toFixed(0)}°`;
-                    const distancia30s = (distanciaMetros / 9) * 30;
-                    const pontoFinalVetor = calcularPontoDestino(mediaRecente.lat, mediaRecente.lon, distancia30s, direcaoGraus);
-                    vetorVelocidadeLayer = L.polyline([[mediaRecente.lat, mediaRecente.lon],[pontoFinalVetor.latitude, pontoFinalVetor.longitude]], { color: '#FF4500', weight: 3, dashArray: '5, 5' }).addTo(map);
+                    // **NOVO: Proteção para não desenhar vetores absurdos**
+                    if (velocidadeKnots < 50 && velocidadeKnots > 0.1) {
+                        const distancia30s = (distanciaMetros / 9) * 30;
+                        const pontoFinalVetor = calcularPontoDestino(mediaRecente.lat, mediaRecente.lon, distancia30s, direcaoGraus);
+                        vetorVelocidadeLayer = L.polyline([[mediaRecente.lat, mediaRecente.lon],[pontoFinalVetor.latitude, pontoFinalVetor.longitude]], { color: '#FF4500', weight: 3, dashArray: '5, 5' }).addTo(map);
+                    }
                 } else {
-                    mediaAntigaEl.textContent = "--";
-                    velocidadeEl.textContent = "--";
-                    direcaoEl.textContent = "--";
+                    mediaAntigaEl.textContent = "--"; velocidadeEl.textContent = "--"; direcaoEl.textContent = "--";
                 }
             } else { mediaRecenteEl.textContent = "--"; }
         }
 
-        // --- Demais funções ---
-        if ('geolocation' in navigator) {
-            navigator.geolocation.watchPosition(processarPosicao, tratarErro, { enableHighAccuracy: true, maximumAge: 0, timeout: 10000 });
-        } else { statusEl.textContent = "Geolocalização não é suportada."; statusEl.style.backgroundColor = '#cf6679'; }
+        // --- Funções Auxiliares (sem alterações) ---
+        if ('geolocation' in navigator) { navigator.geolocation.watchPosition(processarPosicao, tratarErro, { enableHighAccuracy: true, maximumAge: 0, timeout: 10000 }); } else { statusEl.textContent = "Geolocalização não é suportada."; statusEl.style.backgroundColor = '#cf6679'; }
         function calcularMediaLatLon(pontos) { if (pontos.length === 0) return null; const soma = pontos.reduce((acc, p) => ({ lat: acc.lat + p.lat, lon: acc.lon + p.lon }), { lat: 0, lon: 0 }); return { lat: soma.lat / pontos.length, lon: soma.lon / pontos.length }; }
         function haversine(ponto1, ponto2) { const R = 6371e3; const toRadians = (deg) => deg * (Math.PI / 180); const dLat = toRadians(ponto2.lat - ponto1.lat); const dLon = toRadians(ponto2.lon - ponto1.lon); const lat1 = toRadians(ponto1.lat); const lat2 = toRadians(ponto2.lat); const a = Math.sin(dLat / 2) * Math.sin(dLat / 2) + Math.sin(dLon / 2) * Math.sin(dLon / 2) * Math.cos(lat1) * Math.cos(lat2); const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a)); return R * c; }
         function calcularDirecao(pontoInicial, pontoFinal) { const toRadians = (deg) => deg * (Math.PI / 180); const toDegrees = (rad) => rad * (180 / Math.PI); const lat1 = toRadians(pontoInicial.lat); const lon1 = toRadians(pontoInicial.lon); const lat2 = toRadians(pontoFinal.lat); const lon2 = toRadians(pontoFinal.lon); const dLon = lon2 - lon1; const y = Math.sin(dLon) * Math.cos(lat2); const x = Math.cos(lat1) * Math.sin(lat2) - Math.sin(lat1) * Math.cos(lat2) * Math.cos(dLon); return (toDegrees(Math.atan2(y, x)) + 360) % 360; }
