--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>ContraNav GPS</title>
+    <title>ContraNav GPS [v5]</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
     <style>
         html, body {
@@ -71,21 +71,16 @@
         const cartaNauticaLayer = L.imageOverlay(imageUrl, imageBounds, { opacity: 0.7, interactive: true })
             .on('error', () => alert("ERRO: Não foi possível carregar sua imagem PNG. Verifique a URL no código."));
 
-        const map = L.map('map');
-        cartoLayer.addTo(map);
+        // **INICIALIZAÇÃO CORRIGIDA E DIRETA**
+        const map = L.map('map').setView([-26.908, -48.625], 13); // 1. Força uma visão inicial
+        cartoLayer.addTo(map);                                    // 2. Adiciona a camada base
+        map.fitBounds(imageBounds);                               // 3. Ajusta o zoom para sua imagem
 
         const baseMaps = { "Mapa Padrão (CartoDB)": cartoLayer, "Mapa Alternativo (OSM)": osmLayer };
         const overlayMaps = { "Carta Náutica": cartaNauticaLayer };
         L.control.layers(baseMaps, overlayMaps).addTo(map);
 
-        map.whenReady(function() {
-            this.fitBounds(imageBounds);
-            setTimeout(() => this.invalidateSize(), 200);
-        });
-
-        map.on('load', () => statusEl.textContent = 'Mapa carregado. Aguardando GPS...');
-
-        // --- LÓGICA DO GPS E PLOTAGEM ---
+        // --- LÓGICA DO GPS E PLOTAGEM (sem alterações) ---
         let pontoMedioLayer = null, vetorVelocidadeLayer = null, circuloRaio1Layer = null, circuloRaio2Layer = null;
         raio1Slider.addEventListener('input', (e) => { raio1 = parseInt(e.target.value); raio1ValueEl.textContent = `${raio1} m`; });
         raio2Slider.addEventListener('input', (e) => { raio2 = parseInt(e.target.value); raio2ValueEl.textContent = `${raio2} m`; });
@@ -126,27 +121,13 @@
             } else { mediaRecenteEl.textContent = "--"; }
         }
 
-        // --- FUNÇÕES AUXILIARES COMPLETAS ---
+        // --- FUNÇÕES AUXILIARES (sem alterações) ---
         function tratarErro(erro) { let msg; switch (erro.code) { case erro.PERMISSION_DENIED: msg = "Permissão de localização negada."; break; case erro.POSITION_UNAVAILABLE: msg = "Localização indisponível."; break; case erro.TIMEOUT: msg = "Solicitação de localização expirou."; break; default: msg = "Erro desconhecido."; break; } statusEl.textContent = msg; statusEl.style.backgroundColor = '#cf6679'; }
         if ('geolocation' in navigator) { navigator.geolocation.watchPosition(processarPosicao, tratarErro, { enableHighAccuracy: true, maximumAge: 0, timeout: 10000 }); } else { statusEl.textContent = "Geolocalização não é suportada."; }
         function calcularMediaLatLon(pontos) { if (pontos.length === 0) return null; const soma = pontos.reduce((acc, p) => ({ lat: acc.lat + p.lat, lon: acc.lon + p.lon }), { lat: 0, lon: 0 }); return { lat: soma.lat / pontos.length, lon: soma.lon / pontos.length }; }
         function haversine(ponto1, ponto2) { const R = 6371e3; const toRadians = (deg) => deg * (Math.PI / 180); const dLat = toRadians(ponto2.lat - ponto1.lat); const dLon = toRadians(ponto2.lon - ponto1.lon); const lat1 = toRadians(ponto1.lat); const lat2 = toRadians(ponto2.lat); const a = Math.sin(dLat / 2) * Math.sin(dLat / 2) + Math.sin(dLon / 2) * Math.sin(dLon / 2) * Math.cos(lat1) * Math.cos(lat2); const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a)); return R * c; }
         function calcularPontoDestino(lat, lon, dist, brng) { const R = 6371e3; const d = dist; const lat1 = lat * Math.PI / 180; const lon1 = lon * Math.PI / 180; const brngRad = brng * Math.PI / 180; const lat2 = Math.asin(Math.sin(lat1) * Math.cos(d / R) + Math.cos(lat1) * Math.sin(d / R) * Math.cos(brngRad)); const lon2 = lon1 + Math.atan2(Math.sin(brngRad) * Math.sin(d / R) * Math.cos(lat1), Math.cos(d / R) - Math.sin(lat1) * Math.sin(lat2)); return { latitude: lat2 * 180 / Math.PI, longitude: lon2 * 180 / Math.PI }; }
-        
-        // **FUNÇÃO CORRIGIDA**
-        function calcularDirecao(pontoInicial, pontoFinal) {
-            const toRadians = (deg) => deg * (Math.PI / 180);
-            const toDegrees = (rad) => rad * (180 / Math.PI);
-            const lat1 = toRadians(pontoInicial.lat);
-            const lon1 = toRadians(pontoInicial.lon);
-            const lat2 = toRadians(pontoFinal.lat);
-            const lon2 = toRadians(pontoFinal.lon);
-            const dLon = lon2 - lon1;
-            const y = Math.sin(dLon) * Math.cos(lat2);
-            const x = Math.cos(lat1) * Math.sin(lat2) - Math.sin(lat1) * Math.cos(lat2) * Math.cos(dLon);
-            const brng = toDegrees(Math.atan2(y, x));
-            return (brng + 360) % 360;
-        }
+        function calcularDirecao(pontoInicial, pontoFinal) { const toRadians = (deg) => deg * (Math.PI / 180); const toDegrees = (rad) => rad * (180 / Math.PI); const lat1 = toRadians(pontoInicial.lat); const lon1 = toRadians(pontoInicial.lon); const lat2 = toRadians(pontoFinal.lat); const lon2 = toRadians(pontoFinal.lon); const dLon = lon2 - lon1; const y = Math.sin(dLon) * Math.cos(lat2); const x = Math.cos(lat1) * Math.sin(lat2) - Math.sin(lat1) * Math.cos(lat2) * Math.cos(dLon); const brng = toDegrees(Math.atan2(y, x)); return (brng + 360) % 360; }
     </script>
 </body>
 </html>
